Customer Registry with REST Controllers + TU Cart component (no REST support) + TU