@@ -1,12 +1,14 @@
 package fr.univcotedazur.simpletcfs.components;
 
 import fr.univcotedazur.simpletcfs.CartModifier;
+import fr.univcotedazur.simpletcfs.CartProcessor;
 import fr.univcotedazur.simpletcfs.CustomerFinder;
 import fr.univcotedazur.simpletcfs.CustomerRegistration;
 import fr.univcotedazur.simpletcfs.entities.Cookies;
 import fr.univcotedazur.simpletcfs.entities.Customer;
 import fr.univcotedazur.simpletcfs.entities.Item;
 import fr.univcotedazur.simpletcfs.exceptions.AlreadyExistingCustomerException;
+import fr.univcotedazur.simpletcfs.exceptions.EmptyCartException;
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -38,6 +40,9 @@ class CartTest {
     @Autowired
     private CartModifier cart;
 
+    @Autowired
+    private CartProcessor processor;
+
     private Customer john;
 
     @BeforeEach
@@ -49,26 +54,26 @@ class CartTest {
 
     @Test
     public void emptyCartByDefault() {
-        Set<Item> data = cart.contents(john);
-        assertArrayEquals(new Item[] {}, data.toArray());
+        assertEquals(0,processor.contents(john).size());
     }
 
     @Test
     public void addItems() {
         cart.add(john, new Item(Cookies.CHOCOLALALA, 2));
         cart.add(john, new Item(Cookies.DARK_TEMPTATION, 3));
-        Item[] oracle = new Item[] {new Item(Cookies.CHOCOLALALA, 2), new Item(Cookies.DARK_TEMPTATION, 3)  };
-        assertEquals(new HashSet<>(Arrays.asList(oracle)), cart.contents(john));
+        Set<Item> oracle = Set.of(new Item(Cookies.CHOCOLALALA, 2), new Item(Cookies.DARK_TEMPTATION, 3));
+        assertEquals(oracle, processor.contents(john));
     }
 
     @Test
     public void removeItems() {
         cart.add(john, new Item(Cookies.CHOCOLALALA, 2));
         cart.remove(john, new Item(Cookies.CHOCOLALALA, 2));
-        assertArrayEquals(new Item[] {}, cart.contents(john).toArray());
+        assertEquals(0,processor.contents(john).size());
         cart.add(john, new Item(Cookies.CHOCOLALALA, 6));
         cart.remove(john, new Item(Cookies.CHOCOLALALA, 5));
-        assertArrayEquals(new Item[] {new Item(Cookies.CHOCOLALALA, 1)}, cart.contents(john).toArray());
+        Set<Item> oracle = Set.of(new Item(Cookies.CHOCOLALALA, 1));
+        assertEquals(oracle, processor.contents(john));
     }
 
     @Test
@@ -76,8 +81,24 @@ class CartTest {
         cart.add(john, new Item(Cookies.CHOCOLALALA, 2));
         cart.add(john, new Item(Cookies.DARK_TEMPTATION, 3));
         cart.add(john, new Item(Cookies.CHOCOLALALA, 3));
-        Item[] oracle = new Item[] {new Item(Cookies.CHOCOLALALA, 5), new Item(Cookies.DARK_TEMPTATION, 3)  };
-        assertEquals(new HashSet<>(Arrays.asList(oracle)), cart.contents(john));
+        Set<Item> oracle = Set.of(new Item(Cookies.CHOCOLALALA, 5), new Item(Cookies.DARK_TEMPTATION, 3));
+        assertEquals(oracle, processor.contents(john));
+    }
+
+    @Test
+    public void getTheRightPrice() {
+        cart.add(john, new Item(Cookies.CHOCOLALALA, 2));
+        cart.add(john, new Item(Cookies.DARK_TEMPTATION, 3));
+        cart.add(john, new Item(Cookies.CHOCOLALALA, 3));
+        assertEquals(12.20, processor.price(john), 0.01);
+    }
+
+    @Test
+    public void cannotProcessEmptyCart() throws Exception {
+        assertEquals(0,processor.contents(john).size());
+        Assertions.assertThrows( EmptyCartException.class, () -> {
+            processor.validate(john);
+        });
     }
 
 }
